--- a/project_technologies.json
+++ b/project_technologies.json
@@ -1,16 +1,20 @@
 {
     "technologies": {
         "apis": [
-            "insert apis"
+            "maps"
         ],
         "platforms": [
-            "insert platforms"
+            "linux",
+            "android"
         ],
         "toolkits": [
-            "insert toolkits"
+            "openframeworks",
+            
         ]
     },
     "themes": [
-        "insert themes"
+        "Music",
+        "GPS",
+        "Synth"
     ]
 }
