--- a/project_technologies.json
+++ b/project_technologies.json
@@ -8,8 +8,7 @@
             "android"
         ],
         "toolkits": [
-            "openframeworks",
-            
+            "openframeworks"
         ]
     },
     "themes": [
